z-index fixes

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -93,6 +93,7 @@ h1, h2{
 		margin: auto;
 		width: 80vw;
 		height: 50vh;
+		z-index: -5;
 
 		h1{
 			font-size: 10vw;
@@ -109,6 +110,7 @@ h1, h2{
 
 .background__intro{
 	background-image: url('../images/background_low.jpg');
+	z-index: -5;
 
 	&:before{
 		background-color: rgba(0,0,0,0.4);
